added the ludo game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,8 +49,9 @@
         <activity android:name=".InstructionsActivity" />
         <activity android:name=".BasketballGameActivity"/>
         <activity android:name=".FootballGameActivity" />
-
-
+        <activity android:name=".PuliMekaActivity" />
+        <activity android:name=".showinfo" />
+        <activity android:name=".LudoActivity" />
     </application>
 
 
