--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         <!-- Sign-In Activity (Launcher) -->
         <activity
-            android:name=".SignInActivity"
+            android:name=".LoginActivity"
             android:exported="true"> <!-- Explicitly set exported -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +23,10 @@
         </activity>
 
         <!-- Login Activity -->
-        <activity
+        <!--<activity
             android:name=".LoginActivity"
-            android:exported="false" /> <!-- No intent-filter, not exposed -->
-
+            android:exported="false" /> &lt;!&ndash; No intent-filter, not exposed &ndash;&gt;
+-->
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
